syntax = "proto3";
option csharp_namespace = "Phorkus.Core.Proto";
import "asset.proto";
import "default.proto";

enum TransactionType {
    TRANSACTION_TYPE_MINER = 0;
    TRANSACTION_TYPE_REGISTER = 1;
    TRANSACTION_TYPE_ISSUE = 2;
    TRANSACTION_TYPE_CONTRACT = 3;
    TRANSACTION_TYPE_PUBLISH = 4;
    TRANSACTION_TYPE_DEPOSIT = 5;
    TRANSACTION_TYPE_WITHDRAW = 6;
}

enum TransactionFlag {
    TRANSACTION_FLAG_NONE = 0x0000;
}

message ContractTransaction {
    UInt160 asset = 1;
    UInt160 to = 2;
    Fixed256 value = 3;
    bytes data = 4;
}

message IssueTransaction {
    UInt160 asset = 1;
    Fixed256 supply = 2;
}

message PublishTransaction {
    UInt160 hash = 1;
    bytes script = 2;
}

message RegisterTransaction {
    AssetType type = 1;
    string name = 2;
    Fixed256 supply = 3;
    uint32 decimals = 4;
    UInt160 owner = 5;
}

message MinerTransaction {
    UInt160 miner = 1;
}

message TransactionState {
    enum TransactionStatus {
        TRANSACTION_STATUS_TAKEN = 0;
        TRANSACTION_STATUS_CONFIRMED = 1;
        TRANSACTION_STATUS_FAILED = 2;
    }
    TransactionStatus status = 1;
}

message Transaction {
    TransactionType type = 1;
    uint32 version = 2;
    uint64 flags = 3;
    UInt160 from = 4;
    uint64 nonce = 5;
    oneof data {
        ContractTransaction contract = 6;
        IssueTransaction issue = 7;
        PublishTransaction publish = 8;
        RegisterTransaction register = 9;
        MinerTransaction miner = 10;
    }
    Signature signature = 11;
}

/*
tx_hash = hash( raw_tx + sign(hash(raw_tx)) )

check this link: https://en.bitcoin.it/wiki/Transaction_malleability
*/
message SignedTransaction {
    Transaction transaction = 1;
    UInt256 hash = 2;
    Signature signature = 3;
}